# langchain-oracle

./: .release-please-manifest.json  README.md  release-please-config.json
.github/scripts/: get_min_versions.py
.github/workflows/: CI.yml  _codespell.yml  _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  macaron-check-github-actions.yml  release-manager.yml
libs/langgraph-oracledb/: Makefile  README.md  pyproject.toml  pytest.ini
libs/langgraph-oracledb/langgraph_oracledb/checkpoint/oracle/: __init__.py  _ainternal.py  _internal.py  _lob.py  aio.py  base.py  sync.py
libs/langgraph-oracledb/langgraph_oracledb/store/oracle/: __init__.py  aio.py  base.py
libs/langgraph-oracledb/tests/: _checkpoint_test_utils.py  conftest.py  conftest_checkpointer.py  conftest_store.py  embed_test_utils.py  test_async_store.py  test_checkpoint_async.py  test_checkpoint_storage_async.py  test_checkpoint_storage_sync.py  test_checkpoint_sync.py  test_checkpoint_with_multiple_sessions.py  test_concurrent_setup_race_condition.py  test_connection.py  test_oracle_json_normalization.py  test_readme_checkpoint_async.py  test_search_where_async.py  test_search_where_key_combinations.py  test_search_where_parameter_combinations.py  test_search_where_sync.py  test_store.py  test_store_config_isolation.py  test_store_persistence_with_multiple_sessions.py  test_store_search_async.py  test_store_search_combinations.py  test_store_search_key_combinations.py  test_store_search_parameter_combinations.py  test_store_search_sync.py
libs/oci/: Makefile  README.md  pyproject.toml
libs/oci/langchain_oci/: __init__.py
libs/oci/langchain_oci/agents/: __init__.py  common.py  react.py
libs/oci/langchain_oci/agents/deepagents/: README.md  __init__.py  agent.py
libs/oci/langchain_oci/agents/react/: __init__.py  agent.py
libs/oci/langchain_oci/chat_models/: async_mixin.py  oci_generative_ai.py
libs/oci/langchain_oci/chat_models/providers/: __init__.py  base.py  cohere.py  generic.py
libs/oci/langchain_oci/common/: async_support.py  auth.py  utils.py  xml_tool_call_parser.py
libs/oci/langchain_oci/datastores/: __init__.py
libs/oci/langchain_oci/datastores/tools/: __init__.py  base.py  factory.py  get_document.py  hybrid_search.py  keyword_search.py  schemas.py  search.py  selector.py  stats.py
libs/oci/langchain_oci/datastores/vectorstores/: __init__.py  adb.py  base.py  opensearch.py
libs/oci/langchain_oci/embeddings/: image.py  oci_generative_ai.py
libs/oci/langchain_oci/llms/: oci_generative_ai.py
libs/oci/langchain_oci/utils/: __init__.py  vision.py
libs/oci/tests/integration_tests/: test_compile.py  test_vision_real_images.py
libs/oci/tests/integration_tests/agents/: conftest.py  test_adb.py  test_agents.py  test_deepagents_integration.py  test_opensearch.py  test_react_integration.py  test_sample_scripts.py
libs/oci/tests/integration_tests/chat_models/: conftest.py  test_async_integration.py  test_chat_features.py  test_dac_endpoint.py  test_gemini_provider.py  test_langchain_compatibility.py  test_multi_model.py  test_multimodal_integration.py  test_oci_openai_responses_api.py  test_openai_models.py  test_response_format.py  test_tool_calling.py  test_vision.py  test_vision_manual.py
libs/oci/tests/integration_tests/datastores/: __init__.py  test_adb_review_fixes.py  test_hybrid_search_comparison.py
libs/oci/tests/integration_tests/embeddings/: test_image_embedding_integration.py
libs/oci/tests/unit_tests/agents/: test_datastores.py  test_deepagents.py  test_react.py
libs/oci/tests/unit_tests/chat_models/: test_async_support.py  test_media_content_type.py  test_oci_generative_ai.py  test_oci_generative_ai_responses_api.py  test_openai_streaming_fix.py  test_providers.py  test_response_format.py  test_tool_call_caching.py  test_tool_call_turn_scoping.py  test_tool_schema_constraints.py  test_xml_tool_calls.py
libs/oci/tests/unit_tests/embeddings/: test_oci_generative_ai.py
libs/oracledb/: LICENSE.txt  README.md  pyproject.toml
libs/oracledb/langchain_oracledb/: __init__.py  cache.py  chat_message_histories.py
libs/oracledb/langchain_oracledb/document_loaders/: __init__.py  oracleadb_loader.py  oracleai.py
libs/oracledb/langchain_oracledb/embeddings/: __init__.py  oracleai.py
libs/oracledb/langchain_oracledb/retrievers/: __init__.py  hybrid_search.py  text_search.py
libs/oracledb/langchain_oracledb/utilities/: __init__.py  oracleai.py
libs/oracledb/langchain_oracledb/vectorstores/: __init__.py  oraclevs.py  utils.py
libs/oracledb/scripts/: check_imports.py
libs/oracledb/tests/integration_tests/: test_cache.py  test_chat_message_histories.py  test_compile.py
libs/oracledb/tests/integration_tests/document_loaders/: test_oracledb_loader.py  test_oracleds.py
libs/oracledb/tests/integration_tests/embeddings/: test_oracledb_embeddings.py  test_standard.py
libs/oracledb/tests/integration_tests/retrievers/: test_hybrid.py  test_text.py
libs/oracledb/tests/integration_tests/utilities/: test_oracledb_summary.py
libs/oracledb/tests/integration_tests/vectorstores/: test_oraclevs.py  test_standard.py
libs/oracledb/tests/unit_tests/: test_cache.py  test_chat_message_histories.py  test_imports.py  test_proxy_cleanup.py
libs/oracledb/tests/unit_tests/document_loaders/: __init__.py  test_oracleadb.py  test_oracleadb_loader.py  test_oracleai_loader.py
libs/oracledb/tests/unit_tests/embeddings/: test_oracledb_embeddings.py  test_standard.py
libs/oracledb/tests/unit_tests/retrievers/: test_hybrid_search.py  test_text_search.py
libs/oracledb/tests/unit_tests/utilities/: __init__.py  test_oracleai_summary.py
libs/oracledb/tests/unit_tests/vectorstores/: __init__.py  test_oraclevs_chunking.py  test_similarity_search_query.py
samples/: README.md
samples/01-getting-started/: README.md
samples/02-vision-and-multimodal/: README.md
samples/03-building-ai-agents/: README.md
samples/04-tool-calling-mastery/: README.md
samples/05-structured-output/: README.md
samples/07-async-for-production/: README.md
(+61 files in other folders)
